#
# Copyright 2017 The Turbo Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

load(
    "//turbo:copts/configure_copts.bzl",
    "TURBO_DEFAULT_COPTS",
    "TURBO_DEFAULT_LINKOPTS",
    "TURBO_TEST_COPTS",
)

package(default_visibility = ["//visibility:public"])

licenses(["notice"])

# Internal data structure for efficiently detecting mutex dependency cycles
cc_library(
    name = "graphcycles_internal",
    srcs = [
        "internal/graphcycles.cc",
    ],
    hdrs = [
        "internal/graphcycles.h",
    ],
    copts = TURBO_DEFAULT_COPTS + select({
        "//conditions:default": [],
    }),
    linkopts = TURBO_DEFAULT_LINKOPTS,
    visibility = [
        "//turbo:__subpackages__",
    ],
    deps = [
        "//turbo/base",
        "//turbo/base:base_internal",
        "//turbo/base:config",
        "//turbo/base:core_headers",
        "//turbo/base:malloc_internal",
        "//turbo/base:raw_logging_internal",
    ],
)

cc_library(
    name = "kernel_timeout_internal",
    hdrs = ["internal/kernel_timeout.h"],
    copts = TURBO_DEFAULT_COPTS,
    linkopts = TURBO_DEFAULT_LINKOPTS,
    visibility = [
        "//turbo/synchronization:__pkg__",
    ],
    deps = [
        "//turbo/base:core_headers",
        "//turbo/base:raw_logging_internal",
        "//turbo/time",
    ],
)

cc_library(
    name = "synchronization",
    srcs = [
        "barrier.cc",
        "blocking_counter.cc",
        "internal/create_thread_identity.cc",
        "internal/per_thread_sem.cc",
        "internal/waiter.cc",
        "mutex.cc",
        "notification.cc",
    ],
    hdrs = [
        "barrier.h",
        "blocking_counter.h",
        "internal/create_thread_identity.h",
        "internal/futex.h",
        "internal/per_thread_sem.h",
        "internal/waiter.h",
        "mutex.h",
        "notification.h",
    ],
    copts = TURBO_DEFAULT_COPTS,
    linkopts = select({
        "//turbo:msvc_compiler": [],
        "//turbo:clang-cl_compiler": [],
        "//turbo:wasm": [],
        "//conditions:default": ["-pthread"],
    }) + TURBO_DEFAULT_LINKOPTS,
    deps = [
        ":graphcycles_internal",
        ":kernel_timeout_internal",
        "//turbo/base:atomic_hook",
        "//turbo/base",
        "//turbo/base:base_internal",
        "//turbo/base:config",
        "//turbo/base:core_headers",
        "//turbo/base:dynamic_annotations",
        "//turbo/base:malloc_internal",
        "//turbo/base:raw_logging_internal",
        "//turbo/debugging:stacktrace",
        "//turbo/debugging:symbolize",
        "//turbo/time",
    ] + select({
        "//conditions:default": [],
    }),
)

cc_test(
    name = "barrier_test",
    size = "small",
    srcs = ["barrier_test.cc"],
    copts = TURBO_TEST_COPTS,
    linkopts = TURBO_DEFAULT_LINKOPTS,
    tags = [
        "no_test_wasm",
    ],
    deps = [
        ":synchronization",
        "//turbo/time",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "blocking_counter_test",
    size = "small",
    srcs = ["blocking_counter_test.cc"],
    copts = TURBO_TEST_COPTS,
    linkopts = TURBO_DEFAULT_LINKOPTS,
    tags = [
        "no_test_wasm",
    ],
    deps = [
        ":synchronization",
        "//turbo/time",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_binary(
    name = "blocking_counter_benchmark",
    testonly = 1,
    srcs = ["blocking_counter_benchmark.cc"],
    copts = TURBO_TEST_COPTS,
    linkopts = TURBO_DEFAULT_LINKOPTS,
    tags = ["benchmark"],
    visibility = ["//visibility:private"],
    deps = [
        ":synchronization",
        ":thread_pool",
        "@com_github_google_benchmark//:benchmark_main",
    ],
)

cc_test(
    name = "graphcycles_test",
    size = "medium",
    srcs = ["internal/graphcycles_test.cc"],
    copts = TURBO_TEST_COPTS,
    linkopts = TURBO_DEFAULT_LINKOPTS,
    deps = [
        ":graphcycles_internal",
        "//turbo/base:core_headers",
        "//turbo/base:raw_logging_internal",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "graphcycles_benchmark",
    srcs = ["internal/graphcycles_benchmark.cc"],
    copts = TURBO_TEST_COPTS,
    linkopts = TURBO_DEFAULT_LINKOPTS,
    tags = [
        "benchmark",
    ],
    deps = [
        ":graphcycles_internal",
        "//turbo/base:raw_logging_internal",
        "@com_github_google_benchmark//:benchmark_main",
    ],
)

cc_library(
    name = "thread_pool",
    testonly = 1,
    hdrs = ["internal/thread_pool.h"],
    linkopts = TURBO_DEFAULT_LINKOPTS,
    visibility = [
        "//turbo:__subpackages__",
    ],
    deps = [
        ":synchronization",
        "//turbo/base:core_headers",
        "//turbo/functional:any_invocable",
    ],
)

cc_test(
    name = "mutex_test",
    size = "large",
    srcs = ["mutex_test.cc"],
    copts = TURBO_TEST_COPTS,
    linkopts = TURBO_DEFAULT_LINKOPTS,
    shard_count = 25,
    deps = [
        ":synchronization",
        ":thread_pool",
        "//turbo/base",
        "//turbo/base:config",
        "//turbo/base:core_headers",
        "//turbo/base:raw_logging_internal",
        "//turbo/memory",
        "//turbo/time",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "mutex_method_pointer_test",
    srcs = ["mutex_method_pointer_test.cc"],
    copts = TURBO_TEST_COPTS,
    linkopts = TURBO_DEFAULT_LINKOPTS,
    deps = [
        ":synchronization",
        "//turbo/base:config",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "mutex_benchmark_common",
    testonly = 1,
    srcs = ["mutex_benchmark.cc"],
    copts = TURBO_TEST_COPTS,
    linkopts = TURBO_DEFAULT_LINKOPTS,
    visibility = [
        "//turbo/synchronization:__pkg__",
    ],
    deps = [
        ":synchronization",
        ":thread_pool",
        "//turbo/base",
        "//turbo/base:config",
        "@com_github_google_benchmark//:benchmark_main",
    ],
    alwayslink = 1,
)

cc_binary(
    name = "mutex_benchmark",
    testonly = 1,
    copts = TURBO_DEFAULT_COPTS,
    linkopts = TURBO_DEFAULT_LINKOPTS,
    visibility = ["//visibility:private"],
    deps = [
        ":mutex_benchmark_common",
    ],
)

cc_test(
    name = "notification_test",
    size = "small",
    srcs = ["notification_test.cc"],
    copts = TURBO_TEST_COPTS,
    linkopts = TURBO_DEFAULT_LINKOPTS,
    tags = ["no_test_lexan"],
    deps = [
        ":synchronization",
        "//turbo/time",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "per_thread_sem_test_common",
    testonly = 1,
    srcs = ["internal/per_thread_sem_test.cc"],
    copts = TURBO_TEST_COPTS,
    linkopts = TURBO_DEFAULT_LINKOPTS,
    deps = [
        ":synchronization",
        "//turbo/base",
        "//turbo/base:config",
        "//turbo/strings",
        "//turbo/time",
        "@com_google_googletest//:gtest",
    ],
    alwayslink = 1,
)

cc_test(
    name = "per_thread_sem_test",
    size = "large",
    copts = TURBO_TEST_COPTS,
    linkopts = TURBO_DEFAULT_LINKOPTS,
    tags = [
        "no_test_wasm",
    ],
    deps = [
        ":per_thread_sem_test_common",
        ":synchronization",
        "//turbo/strings",
        "//turbo/time",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "lifetime_test",
    srcs = [
        "lifetime_test.cc",
    ],
    copts = TURBO_TEST_COPTS,
    linkopts = TURBO_DEFAULT_LINKOPTS,
    tags = [
        "no_test_ios_x86_64",
        "no_test_wasm",
    ],
    deps = [
        ":synchronization",
        "//turbo/base:core_headers",
        "//turbo/base:raw_logging_internal",
    ],
)
