#
# Copyright 2017 The Turbo Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

load(
    "//turbo:copts/configure_copts.bzl",
    "TURBO_DEFAULT_COPTS",
    "TURBO_DEFAULT_LINKOPTS",
    "TURBO_TEST_COPTS",
)

package(default_visibility = ["//visibility:public"])

licenses(["notice"])

cc_library(
    name = "time",
    srcs = [
        "civil_time.cc",
        "clock.cc",
        "duration.cc",
        "format.cc",
        "internal/get_current_time_chrono.inc",
        "internal/get_current_time_posix.inc",
        "time.cc",
    ],
    hdrs = [
        "civil_time.h",
        "clock.h",
        "time.h",
    ],
    copts = TURBO_DEFAULT_COPTS,
    linkopts = TURBO_DEFAULT_LINKOPTS,
    deps = [
        "//turbo/base",
        "//turbo/base:config",
        "//turbo/base:core_headers",
        "//turbo/base:raw_logging_internal",
        "//turbo/numeric:int128",
        "//turbo/strings",
        "//turbo/time/internal/cctz:civil_time",
        "//turbo/time/internal/cctz:time_zone",
        "//turbo/types:optional",
    ],
)

cc_library(
    name = "test_util",
    testonly = 1,
    srcs = ["internal/test_util.cc"],
    hdrs = ["internal/test_util.h"],
    copts = TURBO_DEFAULT_COPTS,
    linkopts = TURBO_DEFAULT_LINKOPTS,
    visibility = ["//visibility:private"],
    deps = [
        ":time",
        "//turbo/base:config",
        "//turbo/base:raw_logging_internal",
    ],
)

cc_test(
    name = "time_test",
    srcs = [
        "civil_time_test.cc",
        "clock_test.cc",
        "duration_test.cc",
        "format_test.cc",
        "time_test.cc",
        "time_zone_test.cc",
    ],
    copts = TURBO_TEST_COPTS,
    data = ["//turbo/time/internal/cctz:zoneinfo"],
    env = {"TZDIR": "turbo/time/internal/cctz/testdata/zoneinfo"},
    linkopts = TURBO_DEFAULT_LINKOPTS,
    deps = [
        ":test_util",
        ":time",
        "//turbo/base:config",
        "//turbo/base:core_headers",
        "//turbo/numeric:int128",
        "//turbo/time/internal/cctz:time_zone",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "flag_test",
    srcs = [
        "flag_test.cc",
    ],
    copts = TURBO_TEST_COPTS,
    linkopts = TURBO_DEFAULT_LINKOPTS,
    tags = [
        "no_test_android_arm",
        "no_test_android_arm64",
        "no_test_android_x86",
        "no_test_ios_x86_64",
        "no_test_lexan",
        "no_test_loonix",
        "no_test_wasm",
    ],
    deps = [
        ":time",
        "//turbo/flags:flag",
        "//turbo/flags:reflection",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "time_benchmark",
    srcs = [
        "civil_time_benchmark.cc",
        "clock_benchmark.cc",
        "duration_benchmark.cc",
        "format_benchmark.cc",
        "time_benchmark.cc",
    ],
    copts = TURBO_TEST_COPTS,
    data = ["//turbo/time/internal/cctz:zoneinfo"],
    env = {"TZDIR": "turbo/time/internal/cctz/testdata/zoneinfo"},
    linkopts = TURBO_DEFAULT_LINKOPTS,
    tags = [
        "benchmark",
    ],
    deps = [
        ":test_util",
        ":time",
        "//turbo/base",
        "//turbo/base:core_headers",
        "//turbo/flags:flag",
        "//turbo/hash",
        "@com_github_google_benchmark//:benchmark_main",
    ],
)
